2018-09-13  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/oss.c: Some optimization.

2018-09-10  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c: Loading files with non-ASCII names from the command
	line is fixed;
	* app/sample-editor.c, app/sample-dialog.c: deprecated
	gtk_label_st is replaced by gtk_label_set_text;
	* app/extspinbutton.[ch]: deprecated Gdk function is replaced by
	that from Pango, plus some code optimization.

2018-09-06  Yury Aliaev  <mutab0r@rambler.ru>
	* app/file-operations.[ch]: File interface was rewritten almost
	from scratch because the previous one was too buggy. Now single
	click navigation works correctly, also keyboard usage is improved
	a little bit;
	* app/envelope-box.c, app/gui.[ch], app/instrument-editor.c,
	app/menubar.[ch], app/sample-editor.c: files were modified mainly
	to be consistend with the above changes;
	* app/gui-subs.[ch]: One function is moved here from gui.[ch];
	also some functions incorrectly marked as inline are fixed;
	* app/tracer.c: Possible memory violation is fixed;
	* app/track-editor.c: Possible buffer overflow is fixed;
	* app/drivers/sun-input.c, app/drivers/sun-output.c: sources are
	now consistent with the new drivers' interface (not testes though).

2018-07-19  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.[ch], app/instrument-editor.c, app/sample-editor.c,
	app/drivers/file-output.c, app/st-subs.c, app/xm.[ch]: fixed double
	sample name setting + code optimization.

2018-07-16  Yury Aliaev  <mutab0r@rambler.ru>
	* app/audio.c, app/audioconfig.c, app/gui.c, app/main.c,
	app/menubar.c, app/sample-editor.c, app/drivers/file-output.c,
	configure.in: The version of the audiofile library is now being
	determined in the compilation time without runtime hacks;
	* app/sample-editor.c: Bugfix (double file closing).

2018-06-29  Yury Aliaev  <mutab0r@rambler.ru>
	* app/sample-editor.c: Better fiddling with sounds in sample editor.
	* app/keys.c, app/track-editor.c: The keyboard control for channels'